====================================================

MySQL Connector/Python
Copyright (c) 2009, 2021, Oracle and/or its affiliates.

Full release notes:
 http://dev.mysql.com/doc/relnotes/connector-python/en/

v8.0.28
=======

- WL#14814: Remove support for TLS 1.0 and 1.1
- WL#14813: Add support for Python 3.10
- WL#14720: Support for Multi Factor authentication (pure Python)

v8.0.27
=======

- WL#14710: Support OCI IAM authentication
- WL#14689: Fallback conversion to str for types incompatible with MySQL
- WL#14664: Allow SSPI Kerberos library usage with c-ext
- BUG#33177337: Connection with chained SSL certs fails with ssl_verify_identity
- BUG#28641350: mysqlx.result.Row objects cannot be printed directly

v8.0.26
=======

- WL#14634: Running unit tests against external server
- WL#14542: Deprecate TLS 1.0 and 1.1
- WL#14440: Support for authentication_kerberos_client authentication plugin
- WL#14306: Integrate QA tests into Connector/Python test suite
- WL#14237: Support query attributes
- BUG#32947160: Remove MySQLdb module dependency from Django backend
- BUG#32838010: Fix option files parsing with include directive
- BUG#32789076: MSI is missing required libraries to use auth_ldap_client plugin
- BUG#32778827: Raise an error if the _id is different when replacing a document
- BUG#32740486: Fix typo in docstring
- BUG#32623479: The X DevAPI returns str for binary types values
- BUG#32585611: Fix broken links in X DevAPI reference documentation search
- BUG#31528783: Fix number with ZEROFILL not handled by C extension

v8.0.25
=======

This release contains no functional changes and is published to align
the version number with the MySQL Server 8.0.25 release.

v8.0.24
=======

- WL#14424: Improve timeout error messages
- WL#14240: Remove Python 3.5 support
- WL#14239: Remove Python 2.7 support
- WL#14212: Support connection close notification
- WL#14027: Add support for Python 3.9
- BUG#32532744: MSI destination folder page lacks details of what installs